2006-06-16  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #179774 (b.n.c)
	* itip-formatter.c: (cal_opened_cb), (find_cal_opened_cb):
	Reset the current_ecal and disable the buttons if the calendar
	is not opened properly.

2006-06-09  Chris Heath <chris@heathens.co.nz>

	* itip-view.c (itip_view_destroy): Fix memory leak.
	Fixes bug #335423.

2006-05-31  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #340296
	* itip-formatter.c: (cal_opened_cb), (start_calendar_server),
	(find_cal_opened_cb): Set the default timezone before the calendar
	is opened.
	(find_server), (format_itip_object): If the mail account has the associated
	calendar, then do not open all the calendars. Open the current calendar
	and other calendars marked for conflict search.

2006-02-14  Veerapuram Varadhan <vvaradhan@novell.com>

	* itip-formatter.c (itip_formatter_page_factory): A typo fix from
	gfree to g_free.
	
2006-02-12  Karsten Bräckelmann  <guenther@rudersport.de>

	* itip-formatter.c (itip_formatter_page_factory):
	Removing unnecessary markup in translateable string.
	Fixes part of bug #272789.

2006-02-11  Karsten Bräckelmann  <guenther@rudersport.de>

	* itip-formatter.c (itip_formatter_page_factory): 
	Change a11y names. Fixes part of bug #330723.

2006-01-09  Kjartan Maraas  <kmaraas@gnome.org>

	* itip-formatter.c: (find_cal_opened_cb), (message_foreach_part),
	(update_attendee_status), (view_response_cb), (check_is_instance),
	(format_itip_object): Add some comments and remove unused code.
	* itip-view.c: (itip_view_class_init), (recur_toggled_cb),
	(itip_view_add_upper_info_item_printf),
	(itip_view_add_lower_info_item_printf): Remove more cruft.

2006-01-10  Simon Zheng  <simon.zheng@sun.com>

	* itip-view.c: use e_utf8_strftime() in evolution-data-server/
        libedataserver/e-data-server-util.c instead of the copy in 
        evolution/e-util/e-util.c.

2006-01-06  Andre Klapper <a9016009@gmx.de>

	* evolution/plugins/itip-formatter/itip-formatter.c: