@@ -1,3 +1,8 @@
+2006-06-16  Sankar P  <psankar@novell.com>
+
+	* itip-formatter.c: (view_response_cb):
+	Deletes a GroupWise appointment if accepted or deleted.
+		
 2006-06-16  Chenthill Palanisamy  <pchenthill@novell.com>
 
 	Fixes #179774 (b.n.c)
